--- a/gameshop/gameshop/src/main/resources/application.properties
+++ b/gameshop/gameshop/src/main/resources/application.properties
@@ -6,4 +6,8 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# server.port=8081
+
+# ????
+server.servlet.session.timeout=60
+
+# server.port=8081 ?????
